--- a/reservationservice-web/package.json
+++ b/reservationservice-web/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.10.4",
     "axios": "^0.18.0",
+    "history": "^4.7.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-router": "^4.3.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
