--- a/reservationservice-app/build.gradle
+++ b/reservationservice-app/build.gradle
@@ -28,7 +28,9 @@ repositories {
 dependencies {
 	implementation('org.springframework.boot:spring-boot-starter')
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	implementation('mysql:mysql-connector-java')
 }
 
 springBoot {
@@ -40,7 +42,3 @@ bootJar {
 }
 
 
-//task run(type: JavaExec, dependsOn: classes) {
-//	main = 'com.wetwet.ReservationService.ReservationServiceApplication'
-//	classpath = sourceSets.main.runtimeClasspath
-//}
