patient view updated with breed and species, configurable cors origins

--- a/reservationservice-app/src/main/resources/application.yml
+++ b/reservationservice-app/src/main/resources/application.yml
@@ -11,3 +11,4 @@ spring:
     username: springuser
     password: qwerty123
 spring.datasource.url: jdbc:mysql://localhost:3306/wetwet
+cors.urls: http://localhost:3000
