--- a/reservationservice-app/build.gradle
+++ b/reservationservice-app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter')
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+	implementation("org.springframework.boot:spring-boot-starter-data-rest")
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	implementation('mysql:mysql-connector-java')
 }
