--- a/reservationservice-web/package.json
+++ b/reservationservice-web/package.json
@@ -6,7 +6,9 @@
     "antd": "^3.10.4",
     "axios": "^0.18.0",
     "history": "^4.7.2",
+    "moment": "^2.22.2",
     "react": "^16.6.0",
+    "react-big-calendar-like-google": "^0.0.3",
     "react-dom": "^16.6.0",
     "react-router": "^4.3.1",
     "react-scripts": "2.1.1"
