--- a/reservationservice-app/build.gradle
+++ b/reservationservice-app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
 	implementation("org.springframework.boot:spring-boot-starter-data-rest")
+	compile ('org.springframework.boot:spring-boot-starter-security')
+	compile("io.jsonwebtoken:jjwt:0.7.0")
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	implementation('mysql:mysql-connector-java')
 }
