--- a/reservationservice-web/package.json
+++ b/reservationservice-web/package.json
@@ -11,7 +11,8 @@
     "moment": "^2.22.2",
     "react": "^16.6.0",
     "react-big-calendar-like-google": "^0.0.3",
-    "react-dom": "^16.6.0",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.6.3",
     "react-router": "^4.3.1",
     "react-scripts": "2.1.1"
   },
