--- a/reservationservice-web/package.json
+++ b/reservationservice-web/package.json
@@ -14,7 +14,8 @@
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-router": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-select": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
